[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dune-sdk"
version = "0.1.2"
description = "Python SDK for Dune sandboxes."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "Dune contributors" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiohttp>=3.14.1",
    "pydantic>=2.0",
    "urllib3>=2.7.0",
]

[project.urls]
Homepage = "https://github.com/dune-cloud/dune-sdk"

[tool.hatch.build.targets.wheel]
packages = ["src/dune"]

[tool.hatch.build.targets.sdist]
include = ["src/dune", "README.md", "LICENSE"]
